--- a/backend/cell_geolocator/pom.xml
+++ b/backend/cell_geolocator/pom.xml
@@ -46,7 +46,10 @@
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-streams</artifactId>
 		</dependency>
-
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -100,6 +103,11 @@
 			<groupId>org.springframework.restdocs</groupId>
 			<artifactId>spring-restdocs-mockmvc</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+    		<groupId>io.github.cdimascio</groupId>
+    		<artifactId>dotenv-java</artifactId>
+    		<version>3.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
