--- a/backend/cell_geolocator/src/main/resources/application-dev.properties
+++ b/backend/cell_geolocator/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 opencellid.api.key=${OPENCELLID_API_KEY}
-# google.api.key=${GOOGLE_API_KEY}
+unwired_labs.api.key=${UNWIRED_LABS_API_KEY}
 # mozilla_api_key=${MOZILLA_API_KEY}
 spring.datasource.url=jdbc:postgresql://localhost:5432/cellgeolocator
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
