--- a/backend/cell_geolocator/src/main/resources/application-dev.properties
+++ b/backend/cell_geolocator/src/main/resources/application-dev.properties
@@ -4,6 +4,7 @@ unwired_labs.api.key=${UNWIRED_LABS_API_KEY}
 spring.datasource.url=jdbc:postgresql://localhost:5432/cellgeolocator
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+jwt.secret=${JWT_SECRET}
 
 
 # JPA / Hibernate
