--- a/backend/cell_geolocator/src/main/resources/application-dev.properties
+++ b/backend/cell_geolocator/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 opencellid.api.key=${OPENCELLID_API_KEY}
 unwired_labs.api.key=${UNWIRED_LABS_API_KEY}
-# mozilla_api_key=${MOZILLA_API_KEY}
+combain.api.key=${COMBAIN_API_KEY}
 spring.datasource.url=jdbc:postgresql://localhost:5432/cellgeolocator
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
