--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@changey/react-leaflet-markercluster": "^4.0.0-rc1",
     "@hookform/resolvers": "^5.2.1",
+    "@react-leaflet/core": "^2.1.0",
     "leaflet": "^1.9.4",
     "leaflet.fullscreen": "^4.0.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
-    "react-leaflet": "^5.0.0",
+    "react-leaflet": "^4.2.1",
+    "react-leaflet-cluster": "^3.1.1",
     "react-router-dom": "^7.8.2",
     "zod": "^4.1.3"
   },
