--- a/backend/cell_geolocator/src/main/resources/application-dev.properties
+++ b/backend/cell_geolocator/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ jwt.secret=${JWT_SECRET}
 
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
