--- a/backend/cell_geolocator/src/main/resources/application-dev.properties
+++ b/backend/cell_geolocator/src/main/resources/application-dev.properties
@@ -6,10 +6,12 @@ spring.datasource.url=jdbc:postgresql://aws-1-eu-west-1.pooler.supabase.com:5432
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 jwt.secret=${JWT_SECRET}
+jwt.access.token.expiry-ms=86400000 
+jwt.refresh.token.expiry-ms=604800000
 
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
