--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^3.1.1",
     "react-router-dom": "^7.8.2",
+    "react-toastify": "^11.0.5",
     "zod": "^4.1.3"
   },
   "devDependencies": {
