--- a/backend/cell_geolocator/src/main/resources/application.properties
+++ b/backend/cell_geolocator/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.address=0.0.0.0
 
 
 spring.profiles.active = dev
+
+jwt.access.token.expiry-ms=86400000 
+jwt.refresh.token.expiry-ms=604800000
