--- a/backend/cell_geolocator/src/main/resources/application.properties
+++ b/backend/cell_geolocator/src/main/resources/application.properties
@@ -7,3 +7,13 @@ spring.profiles.active = dev
 
 jwt.access.token.expiry-ms=86400000 
 jwt.refresh.token.expiry-ms=604800000
+
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+
+spring.datasource.hikari.data-source-properties.prepareThreshold=0
+spring.jpa.properties.hibernate.jdbc.use_streams_for_binary=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
