--- a/backend/cell_geolocator/src/main/resources/application-dev.properties
+++ b/backend/cell_geolocator/src/main/resources/application-dev.properties
@@ -12,7 +12,7 @@ jwt.refresh.token.expiry-ms=604800000
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.config.import=optional:file:.env[.properties]
